horizontal scroll and list box left align fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 header{
   margin: 0px;
 }
@@ -332,7 +333,7 @@ input[type="text"], input[type="tel"], input[type="email"]{
   margin-right: 0px;
   padding: 10px;
   font-size: 30px;
-  text-align: start;
+  text-align: center;
   letter-spacing: normal;
   color:#1a02ba;
   font-weight: 800;;
@@ -625,10 +626,6 @@ input[type="text"], input[type="tel"], input[type="email"]{
     padding-bottom: 30px;
   }
 
-  .certificate-one-div h2{
-    text-align: center;
-  }
-
   .certificate-one-div p {
     width: 350px;
     text-align: center;
@@ -688,6 +685,10 @@ input[type="text"], input[type="tel"], input[type="email"]{
   .g-recaptcha{
     transform: scale(0.8);
     transform-origin: center;
+  }
+
+  .certificate-img-div {
+    padding-left: 0px;
   }
 }
 
@@ -763,12 +764,46 @@ input[type="text"], input[type="tel"], input[type="email"]{
   .certificate-two-div{
     margin-left: 20px;
     margin-right: 20px;
+    display: block;
   }
 
   .certificate-two-div p{
     font-size: 15px;
+  }
+
+  .certificate-three-div {
+    gap: 30px;
 }
 
+.list-div {
+    width: 90%;
+        padding-top: 20px;
+    padding-bottom: 30px;
+    margin: 5px;
+}
+
+.list-div li {
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.certificate-one-div p {
+  padding: 0px;
+  width: 300px;
+  }
+
+}
+
+@media (min-width:1025px){
+
+  .container{
+    width: calc(100% - 40px);
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0px;
+  }
+  
 }
 
 
